# pi

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  TODO.md  main.py  math.md  pyproject.toml  sample-q.py  vulture_whitelist.py
.claude/: CLAUDE.md  settings.json
.claude/agents/: code-simplifier.md  codebase-analyzer.md  codebase-locator.md  codebase-pattern-finder.md  codebase-simplifier.md  thoughts-analyzer.md  thoughts-locator.md  web-search-researcher.md
.claude/commands/: 0_clarify.md  1_research_codebase.md  2_create_plan.md  3_review_plan.md  4_implement_plan.md  4_iterate_plan.md  5_implement_plan.md  6_commit.md  6_create_commit.md  7_validate_plan.md  8_describe_pr.md  create_plan.md  describe_pr.md  implement_plan.md  iterate_plan.md  research_codebase.md  review_plan.md  write-claude-md.md
.claude/docs/: claude-md-guide.md
.claude/hack/: doc-sync-hook.sh  install-doc-sync-hook.sh
.claude/skills/workflow/: SKILL.md
.claude/skills/workflow/scripts/: base.py  stage_1_research_codebase.py  stage_2_create_plan.py  stage_3_review_plan.py  stage_4_iterate_plan.py  stage_5_implement_plan.py  stage_6_commit.py  stage_design.py  stage_execute.py  stage_research.py  workflow.py
.github/workflows/: release.yml  test.yml
basic/: bridge.py  config.py  context.py  display.py  main.py  observer.py  tools.py
docs/: index.html
lt/: agent.py  cli.py  display.py  hooks.py  utils.py  workflow.py
scripts/: validate_structured_output.py
tests/: README.md  conftest.py  factories.py  test_agent.py  test_checkers.py  test_cli.py  test_config.py  test_directory.py  test_errors.py  test_hitl.py  test_hooks.py  test_hooks_checkers.py  test_hooks_logging.py  test_hooks_registry.py  test_integration.py  test_loop.py  test_machine.py  test_metrics.py  test_orchestrator.py  test_orchestrator_display.py  test_orchestrator_state.py  test_orchestrator_tools.py  test_permissions.py  test_question_metrics.py  test_registry.py  test_router.py  test_session.py  test_stage_config.py  test_staged_workflow.py  test_utils.py  test_workflow.py  test_workflow_module.py
tests/evaluation/: EVALUATION_APPROACHES.md  METHODOLOGY.md  QUICKSTART.md  README.md  correction_tracker.py  plan_analyzer.py  review_analyzer.py  run_evaluation.py
tests/evaluation/scenarios/01_bug_fix_hook_bypass/: scenario.json
tests/evaluation/scenarios/02_new_feature_dry_run/: scenario.json
tests/evaluation/scenarios/03_breaking_change_workflow_api/: scenario.json
tests/evaluation/scenarios/04_refactor_prompt_loading/: scenario.json
tests/evaluation/scenarios/05_add_version_command/: scenario.json
tests/integration/: conftest.py  test_cli_workflow.py  test_hooks.py  test_log_cleanup.py  test_session_state.py  test_workflow.py  test_workflow_no_api.py
tests/unit/: conftest.py  test_checkpoint.py  test_config_setup.py  test_console.py  test_context.py  test_hello.py  test_hello_world.py  test_observer.py  test_state.py  test_utils.py
tests/unit/basic/: __init__.py  test_bridge.py  test_models.py
tests/unit/cli/: test_cli.py  test_display.py  test_live_display.py  test_speech.py
tests/unit/config/: test_config.py  test_stage_config.py
tests/unit/core/: test_env.py  test_errors.py  test_types.py
tests/unit/doc_sync/: test_doc_sync.py  test_main.py
tests/unit/hooks/: test_checkers.py  test_logging.py  test_registry.py  test_utils.py
tests/unit/support/: test_aitl.py  test_directory.py  test_hitl.py  test_permissions.py
tests/unit/workflow/: __init__.py  test_bridge.py  test_callbacks.py  test_loop.py  test_memory.py  test_memory_tools.py  test_module.py  test_session.py  test_staged_functions.py  test_staged_workflow.py  test_tools.py  test_workflow.py
thoughts/9d38ce2b-4367-45a5-9aa3-c082b50383e1/: plan-workflow-agent-delegation.md
thoughts/shared/plans/: dspy-workflow-module.md
π/: __init__.py  agent.py  agent_comm.py  cli.py  config.py  console.py  context.py  directory.py  errors.py  hello_world.py  hitl.py  hooks.py  models.py  permissions.py  router.py  schemas.py  session.py  stage_config.py  state.py  tools.py  types.py  utils.py  workflow.py  workflow_mcp.py  workflow_module.py
π/bridge/: lm.py  session.py
π/cli/: __init__.py  display.py  live_display.py  main.py  speech.py  utils.py
π/config/: __init__.py  agent.py  providers.py  stages.py
π/core/: __init__.py  constants.py  enums.py  env.py  errors.py  models.py
π/doc_sync/: __init__.py  __main__.py  core.py
π/hooks/: __init__.py  checkers.py  linting.py  logging.py  registry.py  result.py  safety.py  utils.py
π/machine/: __init__.py  machine.py  state.py
π/optimization/: __init__.py  metrics.py  optimizer.py  question_metrics.py  training.py
π/orchestrator/: __init__.py  agent.py  display.py  signatures.py  state.py  tools.py
π/prompts/: __init__.py  commit.py  create_plan.py  describe_pr.py  implement_plan.py  iterate_plan.py  research_codebase.py  review_plan.py  validate_plan.py
π/stages/: README.md  __init__.py  commit.py  implement.py  iterate.py  plan.py  research.py  review.py  validate.py
π/support/: __init__.py  aitl.py  directory.py  hitl.py  permissions.py
π/workflow/: __init__.py  bridge.py  callbacks.py  checkpoint.py  context.py  executor.py  loop.py  memory.py  memory_tools.py  module.py  observer.py  orchestrator.py  session.py  staged.py  state.py  state_machine.py  tools.py  types.py
π/workflow/examples/: __init__.py  scam_phone_app.py
π/workflow_sdk/: __init__.py  checkpoint.py  logging.py  models.py  orchestrator.py  queue.py
