[project]
name = "pi-rpi"
version = "0.1.1"
description = "Research, plan, & implement workflows for Claude agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
authors = [
    { name = "0xjgv" }
]
keywords = [
    "claude", "agent", "cli", "dspy", "automation", "workflow"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Code Generators",
]
dependencies = [
    "claude-agent-sdk>=0.1.18",
    "dspy>=3.0.4",
    "python-dotenv>=1.2.1",
    "rich>=14.2.0",
]

[project.urls]
Homepage = "https://github.com/0xjgv/pi"
Repository = "https://github.com/0xjgv/pi"
Issues = "https://github.com/0xjgv/pi/issues"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.14.9",
]

[project.scripts]
"π" = "π.cli:main"

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["π"]

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
