[project]
name = "pi-rpi"
version = "0.1.1"
description = "Research, plan, & implement workflows for Claude agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
authors = [
    { name = "0xjgv" }
]
keywords = [
    "claude", "agent", "cli", "dspy", "automation", "workflow"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Code Generators",
]
dependencies = [
    "claude-agent-sdk>=0.1.18",
    "dspy>=3.0.4",
    "python-dotenv>=1.2.1",
    "rich>=14.2.0",
]

[project.urls]
Homepage = "https://github.com/0xjgv/pi"
Repository = "https://github.com/0xjgv/pi"
Issues = "https://github.com/0xjgv/pi/issues"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.14.9",
]

[project.scripts]
"π" = "π.cli:main"

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["π"]

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort (import sorting)
    "UP",   # pyupgrade (modern Python syntax)
    "B",    # flake8-bugbear (common bugs)
    "SIM",  # flake8-simplify (simple > complex)
    "RUF",  # ruff-specific rules
    "C4",   # flake8-comprehensions
    "PTH",  # flake8-use-pathlib
    "TCH",  # type-checking imports
    "ARG",  # unused arguments
    "PL",   # pylint subset
    "ANN",  # type annotations (enforced)
]
ignore = [
    "ANN401",   # dynamically-typed-expressions (Any)
    "PLR0913",  # too-many-arguments (conflicts with keyword-only pattern)
    "PLR2004",  # magic-value-comparison (too noisy)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "ANN",      # type annotations relaxed in tests
    "ARG",      # unused arguments common in fixtures
    "PLR2004",  # magic values fine in tests
    "PLC0415",  # late imports fine in tests
    "SIM105",   # contextlib.suppress suggestion
]
"π/support/permissions.py" = [
    "ARG001",   # context param required by SDK callback signature
]
"π/workflow/bridge.py" = [
    "PLR0912",  # complex but working async handler
    "PLR0915",  # complex but working async handler
]
"π/machine/machine.py" = [
    "PLC0415",  # late imports to avoid circular deps
    "PLR0912",  # complex run loop with many branches
    "PLR0915",  # complex but clear execution logic
]
"π/machine/state.py" = [
    "PLR0912",  # many branches in to_dict for clean YAML output
]

[tool.ruff.lint.isort]
known-first-party = ["π"]
