[project]
name = "pi-rpi"
version = "0.1.2"
description = "Research, plan, & implement workflows for Claude agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
authors = [
    { name = "0xjgv" }
]
keywords = [
    "claude", "agent", "cli", "automation", "workflow", "sdk"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Code Generators",
]
dependencies = [
    "claude-agent-sdk>=0.1.20",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "rich>=14.2.0",
]

[project.urls]
Homepage = "https://github.com/0xjgv/pi"
Repository = "https://github.com/0xjgv/pi"
Issues = "https://github.com/0xjgv/pi/issues"

[dependency-groups]
dev = [
    "mutmut>=3.4.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.14.11",
    "vulture>=2.14",
]

[project.scripts]
"π" = "π.cli:main"
"pi" = "π.cli:main"

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["π"]

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
log_cli = false
log_level = "CRITICAL"
markers = [
    "no_api: marks tests that must not make API calls",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
filterwarnings = [
    # Ignore warnings from third-party libraries (not in our control)
    "ignore::ResourceWarning:claude_agent_sdk.*",
]

[tool.ruff]
target-version = "py313"
line-length = 88
preview = true  # enables RUF052, RUF059 for better dead code detection
extend-exclude = ["mutants/"]  # mutmut generated directory

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort (import sorting)
    "UP",   # pyupgrade (modern Python syntax)
    "B",    # flake8-bugbear (common bugs)
    "SIM",  # flake8-simplify (simple > complex)
    "RUF",  # ruff-specific rules
    "C4",   # flake8-comprehensions
    "PTH",  # flake8-use-pathlib
    "TCH",  # type-checking imports
    "ARG",  # unused arguments
    "PL",   # pylint subset
    "ANN",  # type annotations (enforced)
    "ERA",  # flake8-eradicate (commented-out code)
    "PIE",  # flake8-pie (unnecessary placeholders)
]
ignore = [
    "ANN401",   # dynamically-typed-expressions (Any)
    "PLR0913",  # too-many-arguments (conflicts with keyword-only pattern)
    "PLR0917",  # too-many-positional-arguments (same as above)
    "PLR2004",  # magic-value-comparison (too noisy)
    "PLR6201",  # use-set-literal (tuple is fine for small membership tests)
    "PLR6301",  # method-could-be-function (design choice for class encapsulation)
    "RUF029",   # async-without-await (hooks required by Claude SDK API)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "ANN",      # type annotations relaxed in tests
    "ARG",      # unused arguments common in fixtures
    "PLC0415",  # late imports fine in tests
    "PLC1901",  # compare-to-empty-string (explicit checks ok in tests)
    "PLC2701",  # private-name-import (testing internal behavior)
    "PIE810",   # single-starts-ends-with (readability over optimization in tests)
    "PLR2004",  # magic values fine in tests
    "RUF029",   # async-without-await (mock iterators)
    "SIM105",   # contextlib.suppress suggestion
]
"π/support/permissions.py" = [
    "ARG001",   # context param required by SDK callback signature
]

[tool.ruff.lint.isort]
known-first-party = ["π"]

[tool.coverage.run]
source = ["π"]
branch = true
# Exclude SDK integration modules that require async mocking
omit = [
    "π/bridge/session.py",  # Async SDK integration
    "π/tools.py",           # MCP tools (async SDK)
    "π/cli/main.py",        # Async CLI entry point
]

[tool.coverage.report]
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@abstractmethod",
]
show_missing = true

[tool.mutmut]
paths_to_mutate = ["π/"]
pytest_add_cli_args_test_selection = ["tests/unit/"]

# Skip files with low mutation value
do_not_mutate = [
    "π/__init__.py",
    "π/*/__init__.py",
    "π/core/enums.py",        # Simple enums
    "π/doc_sync/",            # Separate utility
]
